# hop-cli

./: .gitignore  Cargo.toml  installer-simple.nsi  readme.md
.github/workflows/: build-installer.yml  release.yml
src/: cli.rs  config.rs  main.rs  models.rs  ssh.rs  utils.rs
src/auth/: flow.rs  mod.rs  token.rs
src/commands/: login.rs
